--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="events">Events</string>
     <string name="schedule">Schedule</string>
+    <string name="show_icon">Show icon</string>
 </resources>
